Fri Jun 27 13:29:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_str_new2, rb_tainted_str_new2,
	  rb_usascii_str_new2): use with-length versions with strlen to
	  optimize strlen, if optimized.

Fri Jun 27 13:10:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: need to check sigaltstack and others regardless
	  ucontext.

Fri Jun 27 12:28:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/un.rb (mkmf): new command to create makefile.

Fri Jun 27 11:06:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/un.rb (wait_writable): added help message.

Fri Jun 27 06:52:54 2008  Koichi Sasada  <ko1@atdot.net>

	* configure.in: need a ",".

	* process.c (rb_fork): check CANNOT_FORK_WITH_PTHREAD macro.

Fri Jun 27 06:50:56 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (vm_call_super): fix to call method_missing.
	  [ruby-core:15719], [ruby-core:17340]

Fri Jun 27 00:44:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_binmode_p): fix for backport.

Fri Jun 27 00:00:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (set_arg0, ruby_prog_init): freeze $0.  a patch from Keita
	  Yamaguchi <keita.yamaguchi at gmail.com>.

Thu Jun 26 23:58:29 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (rb_str_index_m, rb_str_rindex_m, rb_str_include): fix
	  rdoc.

Thu Jun 26 17:43:41 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_f_trace_var): should not be allowed at safe level 4.  
	  a patch from Keita Yamaguchi <keita.yamaguchi at gmail.com>.

Thu Jun 26 11:04:30 2008  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems: Update to RubyGems 1.2.0 r1824.  Incorporates patch by
	Yusuke ENDOH [ruby-core:17353].

Thu Jun 26 00:48:31 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): not operand might be empty.  [ruby-dev:35227]

Wed Jun 25 21:54:34 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): make functional-style not operator to act